# rivendell-install

./: .gitignore  ChangeLog  INSTALL  INSTALL-RHEL6  INSTALL-RHEL7  Makefile.am  NEWS  PACKAGE_VERSION  README  autogen.sh  configure.ac  rivendell-install-rhel6.spec.in  rivendell-install-rhel7.spec.in  rivendell-install-web.spec.in  rivendell-install.spec.in
centos6/: Makefile.am  disable-selinux.patch  enable_server.sh  install_rivendell.sh  install_rivendell_devel.sh  qt_plugins_3.3rc  qtrc  smb.conf
centos7/: Makefile.am  Trolltech.conf  asihpi.conf  asound.conf  install_mingw32_devel.sh  install_rivendell.sh  install_rivendell_centos7.sh  install_rivendell_devel.sh  install_rivendell_virtserv.sh  limits.conf  qtrc  rsyslog.conf.patch  selinux.config  smb.conf  visual.sh  xfce-config.tgz
common/: Makefile.am  RPM-GPG-KEY-Reyware  Reyware.repo  auto.misc.client_template  auto.misc.template  auto.rd.audiostore.template  autologin.patch  disable-selinux.patch  docbook5.sh  no_screen_blank.conf  qt_plugins_3.3rc  smb.conf
common/skel/: Makefile.am
docs/: Makefile.am  rivendell-install-rhel6.xml  rivendell-install-rhel7.xml
