## automake.am
##
## centos7/Makefile.am for the rivendell-install package.
##
##   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
## Use automake to process this into a Makefile.in


EXTRA_DIST = asihpi.conf\
             selinux.config\
             install_rivendell.sh\
             install_mingw32_devel.sh\
             install_rivendell_devel.sh\
             limits.conf\
             qt_plugins_3.3rc\
             qtrc\
             smb.conf\
             visual.sh\
             xfce-config.tgz

CLEANFILES = *~

MAINTAINERCLEANFILES = *~\
                       Makefile.in
